# CPP-Circuit-Simulator

./: CMakeLists.txt  Meeting-notes.md  README.md  build.bat  build.sh  circuit-simulator.code-workspace
libs/gtest/: CMakeLists.txt
plan/: initial_notes.md
savefiles/: basiccircuit.net  circuit_test1.net  complicated_transistor_example.net  example1.workspace  example2.workspace  resistors.net  two_dc_sources.net  your_circuit.workspace
src/: CMakeLists.txt  main.cpp
src/Circuit/: CMakeLists.txt  capacitor.cpp  capacitor.hpp  circuit.cpp  circuit.hpp  circuit_netlist.cpp  circuit_netlist.hpp  component.cpp  component.hpp  inductor.cpp  inductor.hpp  netlist.cpp  netlist.hpp  node.cpp  node.hpp  resistor.cpp  resistor.hpp  voltage_source.cpp  voltage_source.hpp  workspace_netlist.cpp  workspace_netlist.hpp
src/GUI/: CMakeLists.txt  button_element.cpp  button_element.hpp  button_menu.cpp  button_menu.hpp  component_element.cpp  component_element.hpp  component_menu.cpp  component_menu.hpp  component_texture_config.hpp  component_type.hpp  element.cpp  element.hpp  element_collection.hpp  gui.cpp  gui.hpp  image_element.cpp  image_element.hpp  text_element.cpp  text_element.hpp  text_field_element.cpp  text_field_element.hpp  wire_element.cpp  wire_element.hpp  wire_node.cpp  wire_node.hpp  workspace.cpp  workspace.hpp
src/Solver/: CMakeLists.txt  inverse.hpp  solver.cpp  solver.hpp
tests/: CMakeLists.txt  circuit_load_tests.cpp  circuit_test.cpp  netlist_tests.cpp
